cmake_minimum_required(VERSION 3.5)
project(zero-epwing)

add_subdirectory(eb)
include_directories(eb ${CMAKE_BINARY_DIR})
option(JANSSON_EXAMPLES "" OFF)
option(JANSSON_BUILD_DOCS "" OFF)
option(JANSSON_WITHOUT_TESTS "" ON)
add_subdirectory(jansson)
#link_directories(eb/eb/.libs ${CMAKE_BINARY_DIR}/jansson/lib)
add_executable(zero-epwing main.c book.c convert.c hooks.c)
add_dependencies(zero-epwing eb jansson)
#target_link_libraries(zero-epwing libeb libz.a libjansson.a)
target_link_libraries(zero-epwing)
