cmake_minimum_required(VERSION 3.5)
project(zero-epwing)

add_subdirectory(eb)
include_directories(eb)
option(JANSSON_EXAMPLES "" OFF)
option(JANSSON_BUILD_DOCS "" OFF)
option(JANSSON_WITHOUT_TESTS "" ON)
add_subdirectory(jansson)
add_executable(zero-epwing main.c book.c convert_win.c hooks.c getopt_win.h)
add_dependencies(zero-epwing eb jansson)
target_link_libraries(zero-epwing eb jansson zlibstatic)
